--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
     "/img/logo.png": "/img/logo.png",
     "/img/logo1m.png": "/img/logo1m.png",
     "/img/logo2.png": "/img/logo2.png",
-    "/img/logo2m.jpg": "/img/logo2m.jpg"
+    "/img/logo2m.jpg": "/img/logo2m.jpg",
+    "/img/stalin.jpg": "/img/stalin.jpg"
 }
